--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "moment": "~2.10.3"
+    "moment": "~2.10.3",
+    "allmighty-autocomplete": "*"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
