--- a/bower.json
+++ b/bower.json
@@ -10,8 +10,7 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "moment": "~2.10.3",
-    "allmighty-autocomplete": "*"
+    "moment": "~2.10.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
