--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "moment": "~2.10.3",
-    "ngmap": "~1.7.11"
+    "ngmap": "~1.7.11",
+    "angular-phonegap-ready": "git://github.com/btford/angular-phonegap-ready.git#~0.0.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
@@ -28,6 +29,6 @@
     }
   },
   "resolutions": {
-    "angular": "~1.3.14"
+    "angular": "^1.3.0"
   }
 }
